# webhook-gateway

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  models.py  service.py  signature.py  store.py
tests/: conftest.py  test_concurrency.py  test_config.py  test_donations_api.py  test_models.py  test_properties.py  test_service.py  test_signature.py  test_stats.py  test_store.py  test_webhook_api.py
