[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-gateway"
version = "0.1.0"
description = "FastAPI service that receives and processes donation webhook events."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Daniil Lozovyi", email = "daniel.lozovyi@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
include = ["app*"]

# --- Test runner configuration -------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

# --- Coverage configuration ----------------------------------------------------
[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
# CI gate: keep coverage above the target stated in CLAUDE.md.
fail_under = 90
