[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "webhook-gateway"
version = "0.1.0"
description = "FastAPI service that receives and processes donation webhook events."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Daniil Lozovyi", email = "daniel.lozovyi@gmail.com" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mutmut>=3.6",
    "ruff>=0.15",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["app*"]

# --- Lint ------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Depends() in a parameter default is the FastAPI idiom, not a bug.
extend-immutable-calls = ["fastapi.Depends"]

# --- Types -----------------------------------------------------------------------
[tool.mypy]
strict = true
files = ["app", "tests"]
python_version = "3.12"

# --- Test runner configuration -------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

# --- Mutation testing -----------------------------------------------------------
[tool.mutmut]
source_paths = ["app"]
pytest_add_cli_args = ["--no-cov", "-q"]

# --- Coverage configuration ----------------------------------------------------
[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
# CI gate: keep coverage above the target.
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    # Abstract-method bodies are unreachable by definition.
    "raise NotImplementedError",
]
